--- a/index.html
+++ b/index.html
@@ -1470,7 +1470,7 @@
         <div class="header-content">
             <div class="logo-section">
                 <div class="app-logo">
-                    <span style="display:flex; width:100%; height:100%; align-items:center; justify-content:center;">सा</span>
+                    <span style="display:flex; width:100%; height:100%; align-items:center; justify-content:center;">स</span>
                 </div>
                 <div>
                     <div class="app-name">Saral Sahayata</div>
